Fix bug: app sidebar overlaps with conversation detail content

--- a/src/app/ws_requests/ws-requests-msgs/ws-sidebar-apps/ws-sidebar-apps.component.scss
+++ b/src/app/ws_requests/ws-requests-msgs/ws-sidebar-apps/ws-sidebar-apps.component.scss
@@ -3,9 +3,10 @@
     z-index: 100;
     top: 0;
     right: 0;
-    width: 33%;
-    // height: 100%;
-    height: calc(100vh + 70px);
+    // width: 33%;
+    width: 100%;
+    height: 100%;
+    // height: calc(100vh + 70px);
     overflow-y: auto;
     overflow-x: hidden;
     background: #fff;
@@ -15,14 +16,14 @@
     padding-bottom: 15px;
 }
 
-@media (max-width: 991px) {
-    .apps-right-side-bar {
-        height: calc(100vh + 918px);
-    }
-}
+// @media (max-width: 991px) {
+//     .apps-right-side-bar {
+//         height: calc(100vh + 918px);
+//     }
+// }
 
 .apps-right-side-bar-panel-mode {
     top: -60px !important;
-    height: calc(100vh + 160px) !important;
-    width: 100% !important;
+    // height: calc(100vh + 160px) !important;
+    width: 100vw !important;
 }
